# cs486

./: .gitignore  Readme.md  a1.azx
a1/: a1.azx
a2/: AStar.hs  Main.hs  Search.hs  SimulatedAnnealing.hs  TSP.hs  TSPAStar.hs  TSPSimulatedAnnealing.hs  a2.azx  astar_data.txt  astar_triangle_data.txt  data.ods  run.sh  tsp-search.cabal
a2/graphing/: Main.hs  graphing.cabal
a3/: Backtracking.hs  ConstraintSolver.hs  Main.hs  Makefile  SudokuSolver.hs  a3.azx  data.ods  data.txt  data2.txt  run.sh  sudoku-solver.cabal
a4/: Main.hs  Makefile  a4.azx  bayesian-vars.cabal  fido_bayes_net.dot
a4/src/: Bayes.hs  Factor.hs  Main.hs
a4/test/: BayesSpec.hs
a5/: Makefile  a5.azx
a5/a1/: Main.hs
a5/q1/: Main.hs  value-iteration.cabal
a5/q4_and_5/: DecisionTree.hs  Main.hs  decision-tree.cabal  horse.sh  porto.sh
a6/: Makefile  a6.azx
