name:                bayesian-vars
version:             0.1.0.0
synopsis:            A bayesian variable-elimination tool.
author:              Alex Klen
maintainer:          alex.klen@uwaterloo.ca
build-type:          Simple
cabal-version:       >=1.10

executable bayesian-vars
  main-is:             Main.hs

  ghc-options: -O2 -Wall -threaded -with-rtsopts=-N8-K10000000 
-- -prof -fprof-auto -rtsopts
  build-depends:       base >=4.6 && <4.7
                     , mtl
                     , array
                     , containers
  default-language:    Haskell2010
